--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
   <!-- Stylesheets go here. -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/global.css" />
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
+  <script src="https://use.fontawesome.com/622f283375.js"></script>
 </head>
 <body>
     <div class="container-fluid sec1">
       <div class="row">
         <div class="col-xs-12 text-center">
           <img src="" />
+        </div>
+        <div class="text-center">
+          <h1>Sam Riley</h1>
+          <h2>Software Engineer</h2>
+        </div>
+        <div class="row">
+          <div class="text-center sec1Contact">
+            <ul>
+              <span><a href="mailto:samriley1217@gmail.com"><i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a></span>
+              <span><a href="https://github.com/Sam-Riley" target="_blank"><i class="fa fa-github animated bounce fa-5x" aria-hidden="true"></i></a></span>
+              <span><a href="https://www.linkedin.com/in/sam-riley-b36b94b2
+" target="_blank"><i class="fa fa-linkedin-square animated bounce fa-5x" aria-hidden="true"></i></a></span>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -23,11 +39,19 @@
         <div class="col-xs-12 text-center">
           <h1>Skills</h1>
           <ul>
-            <li>HTML/CSS</li>
-            <li>JavaScript</li>
-            <li>NodeJS</li>
-            <li>React</li>
-          </ul>
+            <li><i class="devicon-javascript-plain"></i></li>
+           <li><i class="devicon-html5-plain-wordmark"></i></li>
+           <li><i class="devicon-css3-plain-wordmark"></i></li>
+           <li><i class="devicon-bootstrap-plain-wordmark"></i></li>
+           <li><i class="devicon-sass-original"></i></li>
+           <li><i class="devicon-react-original-wordmark"></i></li>
+           <br/>
+           <li><i class="devicon-jquery-plain-wordmark"></i></li>
+           <li><i class="devicon-nodejs-plain-wordmark"></i></li>
+           <li><i class="devicon-postgresql-plain-wordmark"></i></li>
+           <li><i class="devicon-github-plain-wordmark"></i></li>
+           <li><i class="devicon-heroku-plain-wordmark"></i></li>
+         </ul>
         </div>
       </div>
     </div>
