--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h1>Sam Riley</h1>
           <h2>Software Engineer</h2>
         </div>
-        <div class="row">
+        <!-- <div class="row"> -->
           <div class="text-center sec1Contact">
             <ul>
               <span><a href="mailto:samriley1217@gmail.com"><i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a></span>
@@ -30,7 +30,7 @@
 " target="_blank"><i class="fa fa-linkedin-square animated bounce fa-5x" aria-hidden="true"></i></a></span>
             </ul>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
@@ -44,9 +44,9 @@
            <li><i class="devicon-css3-plain-wordmark"></i></li>
            <li><i class="devicon-bootstrap-plain-wordmark"></i></li>
            <li><i class="devicon-sass-original"></i></li>
-           <li><i class="devicon-react-original-wordmark"></i></li>
-           <br/>
            <li><i class="devicon-jquery-plain-wordmark"></i></li>
+           <br/>
+           <li><i class="devicon-react-original-wordmark"></i></li>
            <li><i class="devicon-nodejs-plain-wordmark"></i></li>
            <li><i class="devicon-postgresql-plain-wordmark"></i></li>
            <li><i class="devicon-github-plain-wordmark"></i></li>
